# hrstk

./: README.md  hrstk.cabal
app/: Main.hs
bench/: ari-cops-benchmark.xml  hrstk.py  sn-benchmark.xml
examples/: 747.ari  748.ari  754.ari  757.ari  773.ari  789.ari  aotoyamada_05__014.ari  applicative_treeflatten.ari  brouwerord.ari  diff2.ari  diff2_base.ari  diff3.ari  fastfib.ari  fastrev.ari  fastrev2.ari  fusion2.ari  hamana_JFP19_Ex_7_9.ari  hasegawa_linear_lambda_calc.ari  hofmann.ari  iwami_phdthesis_ex_5_3_15.ari  lambda-subt-x.ari  map.ari  map_inc.ari  ncpo_fv_rule.ari  neg_impl_equiv.ari  neutr.ari  neutrN.ari  nm_iwc2025_ex2.ari  nm_iwc2025_ex3.ari  nm_iwc2025_ex4.ari  nnf.ari  nondirect_cp_connection.ari  pad.ari  pnf.ari  round.ari  sdu.ari  sdu_unif.ari  stlc.ari  sumsq-from.ari  sumsq.ari  (+5 more)
examples/tptp/: aotoyamada_05__014.p  applicative_treeflatten.p  brouwerord.p  diff2_base.p  hamana_JFP19_Ex_7_9.p  hofmann.p  map.p  map_inc.p  neutr.p  neutrN.p  nm_iwc2025_ex2.p  nm_iwc2025_ex3.p  nm_iwc2025_ex4.p  nnf.p  pad.p  pnf.p  sdu.p  test.p  ulc.p  ulc_bot.p  unif.p
src/: ARI.hs  Confluence.hs  Equation.hs  Subst.hs  TPTP.hs  Term.hs  Termination.hs  Typ.hs  Utils.hs
src/ARI/: Parse.hs
src/Equation/: CriticalPairs.hs  Ops.hs  Rewriting.hs  Type.hs
src/Subst/: Match.hs  Ops.hs  Type.hs  Unif.hs
src/TPTP/: Parse.hs
src/Term/: Ops.hs  Type.hs
src/Termination/: NCPO.hs  Poly.hs
src/Termination/NCPO/: Ordering.hs  Solver.hs  Type.hs
src/Termination/Poly/: Interpretation.hs  Solver.hs  Type.hs
src/Typ/: Ops.hs  Type.hs
src/Utils/: FreshMonad.hs  ITerm.hs  InputProcessing.hs  Misc.hs  Parse.hs  Pretty.hs  SMT.hs  Type.hs  TypeInference.hs
tests/: CriticalPairsSpec.hs  EquationOpsSpec.hs  Gen.hs  MatchSpec.hs  NCPOSpec.hs  Properties.hs  RewritingSpec.hs  SubstOpsSpec.hs  TermOpsSpec.hs  Test.hs  TypOpsSpec.hs  UnifSpec.hs
tests/Predefined/: DB.hs  Fun.hs  Sort.hs  Typ.hs  Var.hs
